--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,5 @@ after_success:
 # --delete 删除那些 DST 中 SRC 没有的文件
 # --progress 显示备份过程
 # -e, --rsh=command 指定使用 rsh、ssh 方式进行数据同步。
-- rsync -azv --delete -e ssh 'ssh -o stricthostkeychecking=no' public/ root@$DEPLOY_HOST:/data/charlesfeng/blog/
-- rsync -azv --delete -e ssh 'ssh -o stricthostkeychecking=no' defaulterror/ root@$DEPLOY_HOST:/data/charlesfeng/defaulterror/
+- rsync -azv --delete -e 'ssh -o stricthostkeychecking=no' public/ root@$DEPLOY_HOST:/data/charlesfeng/blog/
+- rsync -azv --delete -e 'ssh -o stricthostkeychecking=no' defaulterror/ root@$DEPLOY_HOST:/data/charlesfeng/defaulterror/
