--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
 git:
   depth: 1
 addons:
-  ssh_known_hosts: $DEPLOY_HOST
+  ssh_known_hosts: 119.23.201.68
 cache:
   directories:
   - node_modules
