--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,5 @@ after_success:
 # --delete-after 传输结束以后再删除
 # --progress 显示备份过程
 # -e, --rsh=command 指定使用 rsh、ssh 方式进行数据同步。
-- rsync -azv --delete-after --progress -e ssh public/ root@$DEPLOY_HOST:/data/charlesfeng/blog/
-- rsync -azv --delete-after --progress -e ssh defaulterror/ root@$DEPLOY_HOST:/data/charlesfeng/defaulterror/
+- rsync -azv --delete-after -e ssh public/ root@119.23.201.68:/data/charlesfeng/blog/
+- rsync -azv --delete-after -e ssh defaulterror/ root@119.23.201.68:/data/charlesfeng/defaulterror/
