--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -36,7 +36,7 @@ jobs:
         run: echo '${{ toJSON(strategy) }}'
       - name: Dump matrix context
         run: echo '${{ toJSON(matrix) }}'
-  Deploy Blog:
+  Deploy-Blog:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
