fix: no strict ssl

--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -21,7 +21,7 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - name: Resolve yarn cert issue
-        run: sed -i '/^  resolved /d' yarn.lock
+        run: yarn config set strict-ssl false
       - name: Install dependencies
         run: yarn install
       - name: Build blog
