--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-dom": "^16.8.3",
     "react-github-btn": "^1.1.1",
     "react-helmet": "^5.2.0",
-    "sharp": "^0.33.5",
+    "sharp": "0.23.4",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
