--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-feed": "^2.3.2",
     "gatsby-plugin-google-analytics": "^2.1.1",
-    "gatsby-plugin-manifest": "^2.2.1",
+    "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-netlify": "^2.0.13",
     "gatsby-plugin-nprogress": "^2.1.0",
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "3.1.0",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "2.2.12",
+    "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-plugin-sitemap": "2.2.1",
     "gatsby-remark-autolink-headers": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
@@ -25,7 +25,7 @@
     "gatsby-remark-prismjs": "3.3.1",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "2.6.2",
-    "gatsby-transformer-sharp": "2.2.1",
+    "gatsby-transformer-sharp": "^4.0.0",
     "lodash": "^4.17.13",
     "lodash.kebabcase": "^4.1.1",
     "moment": "^2.24.0",
@@ -35,7 +35,7 @@
     "react-dom": "^16.8.3",
     "react-github-btn": "^1.1.1",
     "react-helmet": "^5.2.0",
-    "sharp": "0.29.3",
+    "sharp": "^0.33.5",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
