--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "git@github.com:CharlesFeng47/charlesfeng.cn.git",
   "dependencies": {
     "eslint-utils": "^1.4.1",
-    "gatsby": "^2.13.13",
+    "gatsby": "^5.13.0",
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-feed": "^2.3.2",
@@ -16,7 +16,7 @@
     "gatsby-plugin-nprogress": "^2.1.0",
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "3.1.0",
-    "gatsby-plugin-sass": "^2.0.10",
+    "gatsby-plugin-sass": "^5.13.0",
     "gatsby-plugin-sharp": "2.2.12",
     "gatsby-plugin-sitemap": "2.2.1",
     "gatsby-remark-autolink-headers": "^2.1.0",
@@ -29,13 +29,13 @@
     "lodash": "^4.17.13",
     "lodash.kebabcase": "^4.1.1",
     "moment": "^2.24.0",
-    "node-sass": "^4.11.0",
+    "sass": "^1.75.0",
     "prismjs": "^1.15.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-github-btn": "^1.1.1",
     "react-helmet": "^5.2.0",
-    "sharp": "^0.22.1",
+    "sharp": "^0.32.0",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
