try: update sharp

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "3.1.0",
     "gatsby-plugin-sass": "^5.13.0",
-    "gatsby-plugin-sharp": "2.2.12",
+    "gatsby-plugin-sharp": "^5.13.0",
     "gatsby-plugin-sitemap": "2.2.1",
     "gatsby-remark-autolink-headers": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
@@ -25,14 +25,14 @@
     "gatsby-remark-prismjs": "3.3.1",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "2.6.2",
-    "gatsby-transformer-sharp": "2.2.1",
+    "gatsby-transformer-sharp": "^5.13.0",
     "lodash": "^4.17.13",
     "lodash.kebabcase": "^4.1.1",
     "moment": "^2.24.0",
     "sass": "^1.75.0",
     "prismjs": "^1.15.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-github-btn": "^1.1.1",
     "react-helmet": "^5.2.0",
     "sharp": "^0.32.0",
@@ -53,7 +53,8 @@
     "stylefmt": "^6.0.3",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.0.0",
-    "write-good": "^1.0.1"
+    "write-good": "^1.0.1",
+    "node-gyp": "^9.0.0"
   },
   "keywords": [
     "development",
