--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           flags: '-avzr --delete-after'
           options: ''
-          ssh_options: '-T'
+          ssh_options: '-v -T -o StrictHostKeyChecking=no -o SendEnv=NONE'
           src: 'public/'
           dest: ${{ format('root@{0}:~/blog/charlesfeng/blog/', secrets.DeployHost) }}
       - name: Display status from deploy
@@ -49,7 +49,7 @@ jobs:
         with:
           flags: '-avzr --delete-after'
           options: ''
-          ssh_options: '-T'
+          ssh_options: '-v -T -o StrictHostKeyChecking=no -o SendEnv=NONE'
           src: 'defaulterror/'
           dest: ${{ format('root@{0}:/data/charlesfeng/defaulterror/', secrets.DeployHost) }}
       - name: Display status from deploy error page
