--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -26,11 +26,13 @@ jobs:
         run: yarn install
       - name: Yarn Lock file
         run: cat yarn.lock
+      - name: Yarn Lock file hashcode
+        run: cat ${{ hashFiles('**/yarn.lock') }}
       - name: Build blog
         run: yarn build
       - name: Deploy blog to server
         id: deploy
-        uses: Pendect/action-rsyncer@v1.1.0
+        uses: Pendect/action-rsyncer@v2.0.0
         env:
           DEPLOY_KEY: ${{secrets.DeployKey}}
         with:
@@ -43,7 +45,7 @@ jobs:
         run: echo "${{ steps.deploy.outputs.status }}"
       - name: Deploy error page to server
         id: deploy2
-        uses: Pendect/action-rsyncer@v1.1.0
+        uses: Pendect/action-rsyncer@v2.0.0
         env:
           DEPLOY_KEY: ${{secrets.DeployKey}}
         with:
