--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "repository": "git@github.com:CharlesFeng47/charlesfeng.cn.git",
   "dependencies": {
     "eslint-utils": "^1.4.1",
+
     "gatsby": "^5.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-feed": "^2.3.2",
@@ -16,28 +20,28 @@
     "gatsby-plugin-nprogress": "^2.1.0",
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "3.1.0",
-    "gatsby-plugin-sass": "^5.13.0",
-    "gatsby-plugin-sharp": "^5.13.0",
     "gatsby-plugin-sitemap": "2.2.1",
     "gatsby-source-filesystem": "^2.0.23",
 
-    "gatsby-transformer-remark": "6.0.0",
-    "gatsby-remark-images": "7.0.0",
-    "gatsby-remark-prismjs": "7.0.0",
+    "gatsby-plugin-sass": "^6.0.0",
+    "sass": "^1.88.0",
+
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "sharp": "^0.33.0",
+
+    "gatsby-transformer-remark": "^6.0.0",
+    "gatsby-remark-images": "^7.0.0",
+    "gatsby-remark-prismjs": "^7.0.0",
     "gatsby-remark-copy-linked-files": "^6.0.0",
     "gatsby-remark-autolink-headers": "^6.0.0",
 
-    "gatsby-transformer-sharp": "^5.13.0",
     "lodash": "^4.17.13",
     "lodash.kebabcase": "^4.1.1",
     "moment": "^2.24.0",
-    "sass": "^1.75.0",
     "prismjs": "^1.15.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "react-github-btn": "^1.1.1",
     "react-helmet": "^5.2.0",
-    "sharp": "^0.32.0",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
