--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -38,7 +38,7 @@ jobs:
           options: ''
           ssh_options: ''
           src: 'public/'
-          dest: ${{ format('azureuser@{0}:~/blog/charlesfeng/blog/', secrets.DeployHost) }}
+          dest: ${{ format('azureuser@{0}:~/blog/charlesfeng/public/', secrets.DeployHost) }}
       - name: Display status from deploy
         run: echo "${{ steps.deploy.outputs.status }}"
       - name: Deploy error page to server
