--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.0.0",
 
     "gatsby-plugin-google-gtag": "^5.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
 
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-catch-links": "^2.1.0",
@@ -21,7 +22,6 @@
     "gatsby-plugin-nprogress": "^2.1.0",
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "3.1.0",
-    "gatsby-plugin-sitemap": "2.2.1",
     "gatsby-source-filesystem": "^2.0.23",
 
     "gatsby-plugin-sass": "^6.0.0",
