--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 
     "gatsby-plugin-google-gtag": "^5.0.0",
     "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
 
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-catch-links": "^2.1.0",
